# lagkinematic3.0

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  convert_dat_csv.py  lagkin1_converted.csv  lagkinematic3.0.7z  pyproject.toml  to_run.txt
OUT_DEV_LIST/: manifest.json
OUT_DEV_LIST/trajectories/: part-r0000-init.parquet
examples/: config.yml  config_daterange.yml  config_list.yml  config_listfile.yml  config_min.yml  config_real_test.yml  config_synth.yml  dataset_day01.nc  dataset_day02.nc  dataset_day03.nc  elenco_dummy.txt  generate_synth_testcase.py
legacy_cpp/CAMPI/: 4DMED  4DMED_ANCHOVIES  CGLORIS_1-12  GLORAN_cglo_2010-2019  Mercator  RADAR
legacy_cpp/NRc++/: nr3.h  nr3.h~
legacy_cpp/src/: CerchioMassimo.C  CoupleLagrangianTracer.C  CoupleLagrangianTracer2.C  Date.h  DensityT_Backup.C  Field3D_share.C  FieldAbstract.C  Gerris.C  GerrisLuigi.C  Global.C  KinematicModel.C  LAGKINEMATIC1.0.C  LagrangianTracer.C  MFS_MyOcean.C  MFS_MyOcean2D.C  Mercator.C  Mercator180.C  MercatorCout.C  Neighbours.C  PostProcesserCHL_Test.C  PostProcesserCHLuigi.C  PostProcesserSnap.C  PostProcesserSnapCross.C  SuperPost.C  TestFieldAbstract.C  Vector.C  VectorField.C  WRF.C  div.C  interp_cerchio_massimo.h  netcdf.h  nr3.h
python/lagkinematic/: __init__.py  __main__.py  chunking.py  cli.py  geometry.py  integration.py  utils.py
python/lagkinematic/io/: starts.py  (+3 more)
tests/: test_bottom_handling.py  test_config_snaps_intervals.py  test_mask_integration.py  test_mask_nan.py  test_steps_compactor.py  test_synth_regression.py
tests/data/: reference_synth_steps.csv
(+11 files in other folders)
